--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -14,6 +15,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.39.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
