--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -3,3 +3,10 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=afelL0YPBBGjVkePUYehtWLC7UxGHY-L
 DRIVE_DISK=local
+
+DB_CONNECTION=pg
+PG_HOST=127.0.0.1
+PG_PORT=5432
+PG_USER=
+PG_PASSWORD=
+PG_DB_NAME=gisement-app
