config: add shared folder

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -61,6 +61,7 @@
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "shared": "workspace:^1.0.0",
     "source-map-support": "^0.5.21"
   }
 }
