--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.39.0",
+    "shared": "workspace:^1.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
