--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.12.2",
     "@vueuse/core": "^10.5.0",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
