--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tanstack/vue-query": "^5.12.2",
     "@vueuse/core": "^10.5.0",
+    "@vueuse/router": "^10.6.1",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.39.0",
